--- a/FRONTEND/app/src/main/res/layout/activity_catagory_select.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_catagory_select.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:id="@+id/categoryselect_linear_category"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
