--- a/FRONTEND/app/src/main/res/layout/activity_connect.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_connect.xml
@@ -13,15 +13,10 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/margin_115"
-        app:layout_constraintBottom_toBottomOf="@+id/Connect_Bluetooth_Message"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/bluetooth_icon" />
-
+        android:layout_above="@+id/Connect_Bluetooth_Message"
+        android:src="@drawable/connect"/>
 
     <TextView
         android:id="@+id/Connect_Bluetooth_Message"
@@ -40,11 +35,10 @@
         android:id="@+id/btn_go_bluetoothList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="183dp"
-        android:layout_gravity="center"
-        android:background="@drawable/round_background"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/Connect_Bluetooth_Message"
+        android:background="@drawable/pink_round_bg"
         android:text="연결하기"
         android:textColor="@color/colorWhite"
         android:textSize="20dp"
