--- a/FRONTEND/app/src/main/res/layout/activity_join.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_join.xml
@@ -79,7 +79,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:background="@drawable/round_background"
+                        android:background="@drawable/pink_round_bg"
                         android:text="이메일 중복확인"
                         android:textColor="@color/colorWhite" />
 
@@ -89,7 +89,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:background="@drawable/round_background"
+                        android:background="@drawable/pink_round_bg"
                         android:text="이메일 인증"
                         android:textColor="@color/colorWhite" />
                 </LinearLayout>
@@ -117,7 +117,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:background="@drawable/round_background"
+                        android:background="@drawable/pink_round_bg"
                         android:text="인증"
                         android:textColor="@color/colorWhite" />
 
@@ -146,7 +146,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:background="@drawable/round_background"
+                        android:background="@drawable/pink_round_bg"
                         android:text="인증"
                         android:textColor="@color/colorWhite" />
 
