--- a/FRONTEND/app/src/main/res/layout/activity_kids_home.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_kids_home.xml
@@ -6,16 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Kids.KidsHome.KidsHome">
+    tools:context=".Kids.KidsHome.KidsHomeActivity">
 
-    <TextView
+    <ImageView
         android:id="@+id/kidsHome_todolist_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="10dp"
-        android:textSize="20sp"
-        android:text="TO DO LIST"/>
+        android:src="@drawable/todolist_title"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -27,7 +26,7 @@
             android:id="@+id/kidsHome_recyclerview_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             tools:listitem="@layout/item_boardlist">
 
         </android.support.v7.widget.RecyclerView>
@@ -49,60 +48,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_margin="@dimen/margin_10"
-        android:padding="10dp"
+        android:padding="5dp"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/round_background"
+        android:background="@drawable/pink_round_bg"
         android:textColor="@color/colorWhite"
         android:text="로봇 연결하기"
         />
 </LinearLayout>
-
-<!--
-<LinearLayout
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_alignParentStart="true"
-android:orientation="vertical"
-android:layout_alignParentTop="true"
-android:gravity="center"
-android:layout_marginTop="100dp">
-
-<ImageButton
-    android:id="@+id/btn_go_homework"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#FFF3F0"
-    android:layout_margin="10dp"
-    app:srcCompat="@drawable/homework" />
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:text="알림장"
-    android:gravity="center"/>
-</LinearLayout>
-
-<LinearLayout
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_alignParentBottom="true"
-android:orientation="vertical"
-android:layout_centerHorizontal="true"
-android:layout_marginBottom="100dp">
-
-<ImageButton
-    android:id="@+id/btn_go_bluetooth"
-    android:layout_margin="10dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#FFF3F0"
-    app:srcCompat="@drawable/connect" />
-<TextView
-    android:layout_margin="10dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:text="블루투스 연결"/>
-</LinearLayout>
--->
