--- a/FRONTEND/app/src/main/res/layout/activity_operate_robot.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_operate_robot.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/margin_10"
-        android:background="@drawable/round_background"
+        android:background="@drawable/pink_round_bg"
         android:layout_alignParentRight="true"
         android:text="목록으로" />
 
