--- a/FRONTEND/app/src/main/res/layout/activity_play_word_game.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_play_word_game.xml
@@ -16,7 +16,7 @@
         android:layout_marginBottom="99dp"
         android:layout_marginEnd="134dp"
         android:text="정답 맞추기"
-        android:background="@drawable/round_background"
+        android:background="@drawable/pink_round_bg"
         android:textColor="@color/colorWhite"
         android:gravity="center_horizontal|center_vertical"/>
 
@@ -50,7 +50,7 @@
         android:layout_alignTop="@+id/btn_go_kidsMain"
         android:layout_marginEnd="14dp"
         android:textColor="@color/colorWhite"
-        android:background="@drawable/round_background"
+        android:background="@drawable/pink_round_bg"
         android:text="단어\n목록" />
 
     <Button
@@ -62,7 +62,7 @@
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="85dp"
         android:textColor="@color/colorWhite"
-        android:background="@drawable/round_background"
+        android:background="@drawable/pink_round_bg"
         android:text="홈으로" />
 
 </RelativeLayout>
