--- a/FRONTEND/app/src/main/res/layout/activity_success_word.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_success_word.xml
@@ -8,6 +8,26 @@
     tools:context=".Kids.WordGame.SuccessWord">
 
     <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/dance" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="231dp"
+        android:layout_height="63dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/pink_round_bg"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="축하합니다! \n 정말 잘했어요!"
+        android:textColor="@color/colorAccent"
+        android:textSize="20dp" />
+
+
+    <ImageView
         android:id="@+id/imageView2"
         android:layout_width="61dp"
         android:layout_height="75dp"
@@ -26,26 +46,6 @@
         android:layout_marginBottom="98dp"
         android:layout_marginEnd="110dp"
         android:textColor="@color/colorWhite"
-        android:background="@drawable/round_background"
+        android:background="@drawable/pink_round_bg"
         android:text="돌아가기" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="231dp"
-        android:layout_height="63dp"
-        android:layout_centerInParent="true"
-        android:background="@drawable/round_background"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="축하합니다! \n 정말 잘했어요!"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="112dp"
-        android:layout_height="102dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="97dp"
-        app:srcCompat="@drawable/bluetooth_icon" />
 </RelativeLayout>
