--- a/FRONTEND/app/src/main/res/layout/item_to_do_list_kids.xml
+++ b/FRONTEND/app/src/main/res/layout/item_to_do_list_kids.xml
@@ -1,35 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="50dp"
+    android:padding="10dp"
     android:layout_margin="10dp"
-    android:orientation="horizontal"
-    android:background="#FFD8D8"
+    android:background="@drawable/white_round_bg"
     >
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:layout_weight="4"
-        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/todo_list_todo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="New Text"
-            android:textColor="#000000"
-            android:textSize="20dp" />
+        android:id="@+id/to_do_conent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="NEW TITLE"/>
 
         <ImageView
-            android:id="@+id/todo_list_isdo"
+            android:id="@+id/to_do_isdo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/todo_list_todo"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/unchecked" />
-    </RelativeLayout>
-</LinearLayout>
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/unchecked"/>
+</RelativeLayout>
