--- a/FRONTEND/app/src/main/res/layout/fragment_adult_home.xml
+++ b/FRONTEND/app/src/main/res/layout/fragment_adult_home.xml
@@ -15,9 +15,9 @@
 
         <Button
             android:id="@+id/adultHome_button_camera"
+            android:layout_marginTop="10dp"
             android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_margin="30dp"
+            android:layout_height="70dp"
             android:background="@drawable/cctv" />
     </LinearLayout>
 
@@ -25,15 +25,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:orientation="vertical"
+        >
+        <ImageView
+            android:id="@+id/kidsHome_todolist_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/todolist_title_adult"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/adultHome__recyclerview_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            tools:listitem="@layout/item_todolist">
+            tools:listitem="@layout/item_to_do_list_adult">
 
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
