--- a/FRONTEND/app/src/main/res/layout/activity_board_detail.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_board_detail.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/textbox"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="25dp"
                 android:paddingHorizontal="15dp"
                 android:paddingVertical="3dp"
                 android:text="제목입니다"
@@ -50,7 +50,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_margin="5dp"
                 android:background="@drawable/pink_round_bg"
                 android:paddingHorizontal="15dp"
@@ -81,7 +81,7 @@
                 android:id="@+id/board_detail_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginEnd="10dp"
                 android:text="2018-**-**"/>
         </TableRow>
