--- a/FRONTEND/app/src/main/res/layout/fragment_community.xml
+++ b/FRONTEND/app/src/main/res/layout/fragment_community.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/community_title"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="7dp"
             android:layout_centerHorizontal="true"
             />
 
