--- a/FRONTEND/app/src/main/res/layout/item_boardlist.xml
+++ b/FRONTEND/app/src/main/res/layout/item_boardlist.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/itemreview_layout_layout"
     android:layout_width="match_parent"
     android:layout_height="100dp"
@@ -10,31 +10,39 @@
     android:padding="5dp">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
         android:layout_weight="2"
         android:orientation="vertical"
-        android:layout_gravity="center_vertical">
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true">
 
         <TextView
             android:id="@+id/itemboard_textview_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:textColor="@color/colorText" />
+            android:textColor="@color/colorText"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:text="제목입니다"/>
 
         <TextView
             android:id="@+id/itemboard_textview_content"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:layout_height="wrap_content"
-            android:maxLines="2" />
+            android:maxLines="2"
+            android:textSize="15dp"
+            android:text="내용입니다"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentEnd="true">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -77,4 +85,4 @@
                 android:textColor="@color/colorPrimaryDark" />
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
